#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-13-04
2014-01-14 David Schneider
- Translator backend: documentation (overwrite and create_alias_links options)

Tag: V00-13-03
2014-01-13 David Schneider
- Translator backend: update documentation to describe psana Source syntax

Tag: V00-13-02
2014-01-07 Andy Salnikov
- hdf5 backend: add support for vlen tag on (regular) datasets

Tag: V00-13-01
2014-01-07 David Schneider
- update Translator backend for new dll

Tag: V00-13-00
2013-12-22 Andy Salnikov
- merge branch V00-11-00-hddl onto main trunk
- few additional changes needs to support new stuff which happenned on main 
  trunk since V00-12-00

Tag: V00-12-14
2013-12-22 Andy Salnikov
- pdsdata backend: for arrays of unknown size ('*', now exists in 
  Acqiris.TdcDataV1 only) accessor method now takes arguments specifying 
  sizes of unknown dimensions

Tag: V00-12-13
2013-12-19 Andy Salnikov
- hdf5 backend: add 'zero_dims' tag to dataset, nedeed for new Epix type

Tag: V00-12-12
2013-12-16 David Schneider
- hdf5 Translator backend, epics handling, remove FullFrame, documentation

Tag: V00-12-11
2013-12-09 David Schneider
- hdf5 Translator backend, epics handling, added bounds checking for ctrl enum pv

Tag: V00-12-10
2013-12-04 David Schneider
- hdf5 Translator backend, ndarray support
- change epics ctrl enum h5 type id to use no_str in creating h5 type for strs
- update comments in default_psana.cfg, document all cfg options

Tag: V00-12-09
2013-11-19 David Schneider
- hdf5 Translator backend, fix deprecated compiler warning.

Tag: V00-12-08
2013-11-19 David Schneider